Fix badge panel space, zoom image, fix spacing issues

--- a/css/bony.css
+++ b/css/bony.css
@@ -7,7 +7,6 @@
 * 03/09/2019
 */
 
-
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container, .modal-body {
@@ -20,9 +19,10 @@
 }
 
 .col {
-  width: 100%;
+  width: 98%;
   float: left;
   box-sizing: border-box;
+  margin: 0 1% 0 1%;
 }
 
 /* For devices larger than 400px */
@@ -39,10 +39,6 @@
     width: 80%;
   }
 
-  .col {
-    width: 98%;
-    margin: 0 1% 0 1%;
-  }
 
   .c1.col                    { width: 4.66666666667%; }
   .c2.col                    { width: 13.3333333333%; }
@@ -85,30 +81,25 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
+  color: #222;
+  padding: 5rem 0;
+}
 
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 2rem 0;
-  font-weight: 300; }
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
-
-/* Larger than phablet */
-@media (min-width: 550px) {
-  h1 { font-size: 5.0rem; }
-  h2 { font-size: 4.2rem; }
-  h3 { font-size: 3.6rem; }
-  h4 { font-size: 3.0rem; }
-  h5 { font-size: 2.4rem; }
-  h6 { font-size: 1.5rem; }
+  font-weight: 300;
+  letter-spacing: -.1rem;
 }
+
+h1 { font-size: 4.0rem; line-height: 1.2;  }
+h2 { font-size: 3.6rem; line-height: 1.25; }
+h3 { font-size: 3.0rem; line-height: 1.3; }
+h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
+h5 { font-size: 2rem; line-height: 1.5;  letter-spacing: -.05rem; }
+h6 { font-size: 1.8rem; line-height: 1.6;  letter-spacing: 0; }
 
 
 /* Links
@@ -248,7 +239,8 @@ input[type="radio"] {
 label > .label-body {
   display: inline-block;
   margin-left: .5rem;
-  font-weight: normal; }
+  font-weight: normal;
+}
 
 
 /* Lists
@@ -300,7 +292,8 @@ th,
 td {
   padding: 1.2rem 1.5rem;
   text-align: left;
-  border-bottom: 1px solid #E1E1E1; }
+  border-bottom: 1px solid #E1E1E1;
+}
 th:first-child,
 td:first-child {
   padding-left: 0;
@@ -319,13 +312,14 @@ td:last-child {
   border: 1px solid #bbb;
   box-sizing: border-box;
   padding: 0.5rem;
-  margin: 0.25rem 1%;
+  margin-top: 0.5rem;
 }
 
 .panel.big {
   display: block;
   padding: 3rem 4.5rem;
   width: 98%;
+  margin: 0.25rem 1%;
 }
 
 /* Section
@@ -414,6 +408,10 @@ hr {
   border-top: 1px solid #E1E1E1;
 }
 
+img.zoomable {
+  cursor: pointer;
+}
+
 /* Clearing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
@@ -436,6 +434,7 @@ section:after {
   height: 100%;
   z-index: 1;
   display: none;
+  overflow-y: auto;
 }
 
 .modal.show {
@@ -443,8 +442,7 @@ section:after {
 }
 
 .modal-body {
-  margin-top: 10%;
-  display: block;
+  margin: 4% auto;
   padding: 3rem 3rem;
   width: 98%;
   background: #fff;
