--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-body {
-    padding: 100px 0px;
-}
-
 /* Grid demo */
 
 #grid-demo .panel {
@@ -14,4 +10,6 @@ body {
     background: #F3F3F3;
 }
 
-/* Panel */
+#panel-tags {
+    margin-top: 10px;
+}
